Fix landing page overflow

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -49,7 +49,7 @@
   %section.exercises-section.pb-64
     .lg-container
       .flex.flex-col.lg:flex-row.lg:items-start.mb-48.lg:mb-72
-        .flex-grow{ class: "min-w-[50%] lg:max-w-[640px]" }
+        .flex-grow{ class: "mr-auto lg:max-w-[640px]" }
           .section-header.mb-24.sm:mb-32
             = graphical_icon :exercises, hex: true
             %h2.text-h2
