Add impact page (#2963)
* Add code for paginating testimonials

* Draw a fancy chart, show mock data, general setups

* Add BecomeAFuel section, and basic texts on chart.

* Add testimonials ruby component

* Add proper shadow on become a rocket.. section

* Add become a rocket as a separate section. Use negative margin instead of being hand-crafted positioning.

* Clean up chart config a very littlebit

* Remove console logs

* Add pagination to Profile/Testimonials, Remove duplicate useLogger hook - caused my merging

* Fix types in Testimonial resolved data

* Add donors section, tweak chart to look more like design

* Add modified c-shapes

* Convert React to HAML

* Adding chart images - WIP

* Remove unresolved, unimportant imports

* Tweak CSS

* Experimenting with chart js opportunities for bigger flexibility

* Less absolute (#2953)

* Transpose to HAML

* Simplify

* Sketch out testimonials on impact page

* Add paginated testimonials to impact page, set up page-turning

* Big commit: - Start walking on the sith side, generate points using own api, start implementing simular stuff for tooltips

* Add tooltip

* Minimal changes

* Render tooltips and points using real data, refactor a bit

* Rework height calculation on tooltip, add a dateMap for quicker access, rework text alignment inside tooltip

* Experiment with dynamic height

* Improve chart, make sure tooltips stay on chart

* More  tweaking on chart, Add live activity label on top of map

* Add top learning countries and some other minor stuff

* Add header background

* Add impact header background details

* Tooltip tweaks

* Alter border radius dynamically

* Refine responsiveness of tooltip

* Add few comments, to make clearer what things are doing

* Add more responsiveness

* Add more comments

* Pass milestones from component

* Add users per month

* Add chart bottom offset, wire in data from ruby, set y-axis 

--- a/app/css/pages/impact.css
+++ b/app/css/pages/impact.css
@@ -20,6 +20,27 @@
 }
 
 #impact-page {
+    header {
+        width: 100%;
+        height: 501px;
+        left: 0px;
+        top: 64px;
+
+        background: linear-gradient(
+                180deg,
+                rgba(251, 251, 255, 0) 79.36%,
+                #f4f4fd 100%
+            ),
+            linear-gradient(
+                180deg,
+                #fafaff 0%,
+                rgba(250, 250, 255, 0.677852) 24.48%,
+                rgba(250, 250, 255, 0) 77.6%,
+                #fafaff 100%
+            ),
+            url("bg-tracks-header@2x.jpg"), #fafaff;
+        background-size: 100%;
+    }
     .map-point {
         transform-origin: left top;
         &.metric-submit_submission_metric,
@@ -42,6 +63,74 @@
 
             img {
                 filter: drop-shadow(0px 0px 10px rgba(79, 114, 205, 0.3));
+            }
+        }
+    }
+
+    & article.testimonials {
+        & .stats {
+            @apply grid grid-cols-3;
+            @apply mx-auto mb-48;
+            max-width: 690px;
+            & .stat {
+                max-width: 230px;
+                @apply px-24;
+                & .number {
+                    @apply text-24 leading-160 font-medium text-textColor2;
+                    @apply text-center;
+                }
+                & .metric {
+                    @apply text-16 leading-160 text-textColor2;
+                    @apply text-center;
+                }
+            }
+        }
+
+        & .testimonials {
+            column-count: auto;
+            column-width: 350px;
+            column-gap: 24px;
+        }
+        & .testimonial {
+            display: inline-block;
+            margin: 24px 0;
+            width: 100%;
+
+            @apply pt-36 pb-24 px-24;
+            @apply border-1 border-borderColor6;
+            @apply shadow-sm;
+            @apply rounded-8;
+            @apply relative;
+            @apply text-left;
+
+            & .c-avatar {
+                @apply absolute;
+                top: -24px;
+                height: 48px;
+                width: 48px;
+            }
+            & .content {
+                @apply text-20 leading-130 font-medium;
+                @apply mb-8;
+            }
+            & .student-name {
+                @apply text-16 text-textColor2 font-medium leading-160;
+                @apply mb-2;
+            }
+            & .exercise {
+                @apply flex items-center mb-8;
+                @apply text-16 text-textColor6 leading-160;
+                & .c-track-icon {
+                    height: 24px;
+                    width: 24px;
+                    @apply mx-8;
+                }
+                & .track-title {
+                    @apply text-textColor3 font-medium;
+                }
+            }
+            & time {
+                @apply text-textColor6 leading-140 font-medium;
             }
         }
     }
