--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -26,18 +26,18 @@
           .py-12.px-32.bg-purpleHover
             %h3.label-large Students
             .text-purple.font-semibold.text-40.leading-150{ class: 'h-[60px]' }
-              = render ReactComponents::Impact::Stat.new(:sign_up_metric, Metrics.num_users)
+              = render ReactComponents::Impact::Stat.new(:sign_up_metric, Metrics.num_users.to_i)
             .text-successColor.font-bold +1,342 per day
 
           .py-12.px-32.bg-bgGray
             %h3.label-large Exercises Practiced
             .text-purple.font-semibold.text-40.leading-150{ class: 'h-[60px]' }
-              = render ReactComponents::Impact::Stat.new(:start_solution_metric, Metrics.num_solutions)
+              = render ReactComponents::Impact::Stat.new(:start_solution_metric, Metrics.num_solutions.to_i)
             .text-successColor.font-bold +5,742 per day
 
           .py-12.px-32
             %h3.label-large Mentoring Discussions
-            .text-purple.font-semibold.text-40.leading-150= Metrics.num_discussions
+            .text-purple.font-semibold.text-40.leading-150= number_with_delimiter(Metrics.num_discussions.to_i)
 
         .bg-bgGray.shadow-base.py-16.px-24
           %p.text-p-large.mb-8
