Fix stats slightly

--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -15,7 +15,7 @@
       %strong{ class: 'pl-8 pr-8 mr-[-8px] font-bold bg-[url(graphics/impact-highlight.svg)] bg-[length:100%_100%]' } minutes
       of free education.
     %p.font-medium.text-textColor6.text-24.leading-160.text-center{ class: 'max-w-[780px]' }
-      And provide another 132,916 minutes every day!
+      And we provide another 132,916 minutes every day!
       %br
       All on a free, open source project funded by people like you.
 
@@ -180,8 +180,8 @@
 
   .lg-container.mb-64
     .c-shapes-impact.c-shapes-1
-      %h2.text-h1.text-center{ class: "max-w-[840px] mx-auto" }
-        87,305 people testified to the impact Exercism has had on their learning.
+      %h2.text-h1.text-center{ class: "max-w-[800px] mx-auto" }
+        Over 85,000 students have left testimonials to thank their mentors.
 
     .md-container.bg-backgroundColorA
       %article.testimonials.pt-40
