--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -1,37 +1,18 @@
 #page-donate
   %header.pt-24.pd:mt-40.md:shadow-lgZ1
     .lg-container.flex.flex-col.items-center.c-shapes
-      = graphical_icon "donate", category: :graphics
+      = graphical_icon "community-with-exercism-logo", category: :graphics
       %h1.text-h1.mb-4
-        %strong.text-gradient Our Goal:
-        Bring the joy of programming to everyone, everywhere ✨
+        %strong.text-gradient Support our goal:
+        To bring the joy of programming to everyone, everywhere ✨
 
-      .hidden.md:flex.flex-col.items-center.w-100
-        .text-textColor2.text-16.leading-200.flex.items-center.font-semibold.self-end.mb-12
-          .mr-16 Next milestone
-          .c-financial-amount
-            .currency.text-16.leading-100.mr-4 $
-            .dollars.text-20.leading-130 5000
-            .cents.text-14.leading-100 .00
-          .text-14.text-textColor6.font-medium.ml-8 per month
+      .text-textColor1.text-20.text-center.leading-150.mb-48
+        We care about social mobility and bringing underrepresented communities into tech.
+        %br
+        %span.font-medium
+          You can learn more about Our Mission, Roadmap and Team.
 
-        .border-1.border-borderColor6.shadow-smZ1.rounded-8.p-32.w-100.mb-32
-          .c-progress
-            - progress = [1, Donations::Subscription.active_total_per_month_in_dollars / 5000.0].min * 100
-            .bar{ style: "width:#{progress}%" }
-            .target-icon
-              = graphical_icon "party-popper"
-            .goal.bg-lightGold.py-6.px-12.text-16.text-textColor1.leading-150.font-semibold.rounded-8
-              Hire a community manager
 
-        %ul.steps
-          %li.text-darkSuccessGreen
-            1. Build version 3
-            = icon "completed-check-circle", "Done"
-          %li.text-textColor2
-            2. Hire a community manager
-          %li.text-textColor7
-            3. Hire a content manager
 
       .summary.lg-container.hidden.md:flex.items-center
         .item
@@ -56,8 +37,6 @@
 
   .lg-container
     %article.pt-40
-      %section.video-section
-        <div class="video mb-32 rounded-8 overflow-hidden border-3 border-purple" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/595936549?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
       - if user_signed_in?
         %section.form-section
@@ -74,9 +53,31 @@
               before donating. We apologize for the inconvenience!
 
       %section.info-section.pt-48.lg:pt-0
-        %h2.text-h3.mb-12 Help Exercism reach more people and get even better.
-        %p.text-p-large.mb-12
-          Exercism is a not-for-profit organisation that relies on donations from people like you to help us stay sustainable and grow.
-          Through generous donations we were able to make Exercism version 3 (see the video above!), but that's the beginning of what we plan to achieve.
-        %p.text-p-large Can you help empower us with the creative freedom and financial breathing room to develop Exercism into all it can be, and to help as many people embrace the joy of programming as possible?
-        %hr.border-borderColor5.mt-48.mb-32
+        %h2.text-h2.mb-32 Here’s what you can do to support us.
+        .flex.flex-row.shadow-base.p-24.rounded-16.bg-white.mb-16
+          = graphical_icon "money-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
+          .flex.flex-col
+            .text-h4 Donate
+            .text-prose.text-textColor1
+              Use the donation box on this page to make a cash donation to Exercism. Every bit matters. We’ve already got to where we are with less than $500,000 total.
+
+        .flex.flex-row.shadow-base.p-24.rounded-16.bg-white.mb-16
+          = graphical_icon "code-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
+          .flex.flex-col
+            .text-h4 Code Contribution
+            .text-prose.text-textColor1
+              Exercism is open source, and takes code contributions from the community. There are 768 tasks waiting for help. Browse through them by language, task type, and a whole lot more to see if you can help build Exercism.
+
+        .flex.flex-row.shadow-base.p-24.rounded-16.bg-white.mb-16
+          = graphical_icon "organisation-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
+          .flex.flex-col
+            .text-h4 Get your company involved
+            .text-prose.text-textColor1
+              Does your company support not-for-profit organisations? Do you have a matched giving scheme at work? We’d love to chat to you to understand how your company could support us. Drop Loretta an email at fundraising@exercism.org
+
+        .flex.flex-row.shadow-base.p-24.rounded-16.bg-white.mb-16
+          = graphical_icon "social-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
+          .flex.flex-col
+            .text-h4 Love Exercism? Tell others about us!
+            .text-prose.text-textColor1
+              Follow us on Twitter, GitHub and LinkedIn. Tweet and post about us.
