Add new team-members

--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -112,7 +112,104 @@
                   = link_to "https://twitter.com/erikschierboom" do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
+          .person
+            = image_tag "team/taiyab.jpg", alt: "An image of Taiyab Raja", class: "avatar"
+            .details
+              %h3
+                = link_to "Taiyab Raja", "https://taiyab.co.uk/"
+              .handle @taiyab
+              %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
+              %ul.links
+                %li
+                  = link_to "https://taiyab.co.uk" do
+                    = graphical_icon "link"
+                    %span Taiyab Raja's Portfolio
+                %li
+                  = link_to "https://twitter.com/taiyab" do
+                    = graphical_icon "external-site-twitter"
+                    %span Twitter
+                %li
+                  = link_to "https://github.com/taiyab" do
+                    = graphical_icon "external-site-github"
+                    %span GitHub
+          .person
+            = image_tag "team/loretta.jpg", alt: "An image of Loretta Murray", class: "avatar"
+            .details
+              %h3
+                = link_to "Loretta Murray", "https://twitter.com/LorettaBMThink"
+              .handle @LorettaExercism
+              %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
+              %ul.links
+                -# %li
+                  = link_to "https://taiyab.co.uk" do
+                    = graphical_icon "link"
+                    %span Taiyab Raja's Portfolio
+                %li
+                  = link_to "https://twitter.com/LorettaBMThink" do
+                    = graphical_icon "external-site-twitter"
+                    %span Twitter
+                %li
+                  = link_to "https://github.com/LorettaExercism" do
+                    = graphical_icon "external-site-github"
+                    %span GitHub
+          .person
+            = image_tag "team/jonathan.jpg", alt: "An image of Jonathan Middleton", class: "avatar"
+            .details
+              %h3
+                = link_to "Jonathan Middleton", "https://twitter.com/jonny_middleton"
+              .handle @jonathandmiddleton
+              %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
+              %ul.links
+                -# %li
+                  = link_to "https://taiyab.co.uk" do
+                    = graphical_icon "link"
+                    %span Taiyab Raja's Portfolio
+                %li
+                  = link_to "https://twitter.com/jonny_middleton" do
+                    = graphical_icon "external-site-twitter"
+                    %span Twitter
+                %li
+                  = link_to "https://github.com/jonathandmiddleton" do
+                    = graphical_icon "external-site-github"
+                    %span GitHub
+          .person
+            = image_tag "team/aron.jpg", alt: "An image of Aron Demeter", class: "avatar"
+            .details
+              %h3
+                = link_to "Áron Demeter", "https://github.com/dem4ron"
+              .handle @dem4ron
+              %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
+              %ul.links
+                -# %li
+                  = link_to "https://taiyab.co.uk" do
+                    = graphical_icon "link"
+                    %span Taiyab Raja's Portfolio
+                %li
+                  = link_to "https://twitter.com/d4ron1" do
+                    = graphical_icon "external-site-twitter"
+                    %span Twitter
+                %li
+                  = link_to "https://github.com/dem4ron" do
+                    = graphical_icon "external-site-github"
+                    %span GitHub
 
+      %section.alumni-team.mb-64
+        %header.mb-32
+          = graphical_icon "staff-team"
+          %h2.text-h3.mb-12 Alumni
+          %p.text-p-large People who have previously worked full-time at Exercism and since moved onto new adventures. Their legacies are gratefully remembered!
+
+        .grid.grid-cols-1.md:grid-cols-2.gap-16.md:gap-32
+          .person
+            = image_tag "team/nicole.jpg", alt: "An image of Nicole Chalmers", class: "avatar"
+            .details
+              %h3 Nicole Chalmers
+              %p Nicole is the Head of Product at #{link_to 'Kaido', 'https://kaido.org'}. She spent two years as Head of Product for Exercism, guiding us from v1 to v2, and helping set the principles and ideas that still drive Exercism today.
+          .person
+            = image_tag "team/charles.jpg", alt: "An image of Charles Care", class: "avatar"
+            .details
+              %h3 Charles Care
+              %p Charles was part of the team that built Exercism v2, working specifically on the server-side code and infrastructure. He helped build out the first version of our automated mentoring platform, and Github integration.
           .person
             = image_tag "team/karlo.jpg", alt: "An image of Karlo Soriano", class: "avatar"
             .details
@@ -134,44 +231,6 @@
                   = link_to "https://twitter.com/kntsoriano" do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
-          .person
-            = image_tag "team/taiyab.jpg", alt: "An image of Taiyab Raja", class: "avatar"
-            .details
-              %h3
-                = link_to "Taiyab Raja", "https://taiyab.co.uk/"
-              .handle @taiyab
-              %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
-              %ul.links
-                %li
-                  = link_to "https://taiyab.co.uk" do
-                    = graphical_icon "link"
-                    %span Taiyab Raja's Portfolio
-                %li
-                  = link_to "https://twitter.com/taiyab" do
-                    = graphical_icon "external-site-twitter"
-                    %span Twitter
-                %li
-                  = link_to "https://github.com/taiyab" do
-                    = graphical_icon "external-site-github"
-                    %span GitHub
-
-      %section.alumni-team.mb-64
-        %header.mb-32
-          = graphical_icon "staff-team"
-          %h2.text-h3.mb-12 Alumni
-          %p.text-p-large People who have previously worked full-time at Exercism and since moved onto new adventures. Their legacies are gratefully remembered!
-
-        .grid.grid-cols-1.md:grid-cols-2.gap-16.md:gap-32
-          .person
-            = image_tag "team/nicole.jpg", alt: "An image of Nicole Chalmers", class: "avatar"
-            .details
-              %h3 Nicole Chalmers
-              %p Nicole is the Head of Product at #{link_to 'Kaido', 'https://kaido.org'}. She spent two years as Head of Product for Exercism, guiding us from v1 to v2, and helping set the principles and ideas that still drive Exercism today.
-          .person
-            = image_tag "team/charles.jpg", alt: "An image of Charles Care", class: "avatar"
-            .details
-              %h3 Charles Care
-              %p Charles was part of the team that built Exercism v2, working specifically on the server-side code and infrastructure. He helped build out the first version of our automated mentoring platform, and Github integration.
 
       %section.grid.gird-cols-1.md:grid-cols-3.gap-56
         .community-team
