Update Aron's bio

--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -170,7 +170,7 @@
               %h3
                 = link_to "Áron Demeter", "https://github.com/dem4ron"
               .handle @dem4ron
-              %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
+              %p Áron works on the front-end of Exercism. He is a self-taught developer who enjoys discovering interrelations between things. He has a Master's degree in classical piano performance. In his freetime he has fun learning new languages on Exercism, or listening to an opera.
               %ul.links
                 %li
                   = link_to "https://twitter.com/d4ron1" do
